# Holocron

./: .buildinfo  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-api  LICENSE  Makefile  README.md  changelog.html  docker-compose.yml  genindex.html  index.html  installing.html  models.html  mypy.ini  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  trainer.html  utils.data.html  utils.html
.circleci/: config.yml  requirements.txt
.conda/: meta.yaml
.doctrees/: changelog.doctree  environment.pickle  index.doctree  installing.doctree  models.doctree  nn.doctree  nn.functional.doctree  notebooks.doctree  ops.doctree  optim.doctree  trainer.doctree  utils.data.doctree  utils.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  collect_env.py  dependabot.yml  labeler.yml  process_commit.py  pull-labels.yml  release.yml  validate_headers.py  verify_deps_sync.py  verify_labels.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  builds.yml  demo.yml  doc-deploy.yaml  doc-status.yml  docker.yml  docs.yaml  main.yml  page-build.yml  pkg-upload.yaml  pr-labels.yml  pr-merged.yml  publish.yml  pull_requests.yml  push.yml  release.yml  scripts.yml  style.yml  tests.yml  tmp.yml
_modules/: index.html
_modules/holocron/: utils.html
_sources/: index.rst.txt  models.rst.txt  nn.functional.rst.txt  nn.rst.txt  ops.rst.txt  optim.rst.txt  utils.rst.txt
_static/: documentation_options.js
_static/css/: custom_theme.css
api/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: config.py  main.py  schemas.py  vision.py
api/app/routes/: classification.py
api/tests/: conftest.py
api/tests/routes/: test_classification.py
demo/: app.py  requirements.txt
docs/: build.sh  requirements.txt
docs/source/: conf.py  index.rst  installing.rst  models.rst  nn.functional.rst  nn.rst  ops.rst  optim.rst  trainer.rst  transforms.rst  utils.data.rst  utils.rst
holocron/: __init__.py  utils.py
holocron/models/: __init__.py  checkpoints.py  darknet.py  darknetv2.py  darknetv3.py  darknetv4.py  presets.py  pyconvresnet.py  repvgg.py  res2net.py  resnet.py  resnets.py  rexnet.py  sknet.py  tridentnet.py  utils.py
holocron/nn/: __init__.py  functional.py  init.py
holocron/ops/: __init__.py  boxes.py
holocron/optim/: __init__.py  adabelief.py  adamp.py  adan.py  ademamix.py  functional.py  lamb.py  lars.py  lookahead.py  lr_scheduler.py  radam.py  ralars.py  scout.py  tadam.py  wrapper.py
holocron/trainer/: __init__.py  classification.py  core.py  detection.py  segmentation.py  utils.py
holocron/transforms/: __init__.py  interpolation.py
holocron/utils/: __init__.py  misc.py
latest/: .buildinfo  changelog.html  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  transforms.html  utils.data.html  utils.html
latest/.doctrees/: changelog.doctree  environment.pickle  index.doctree  installing.doctree  models.doctree  nn.doctree  nn.functional.doctree  notebooks.doctree  ops.doctree  optim.doctree  trainer.doctree  transforms.doctree  utils.data.doctree  utils.doctree
latest/_modules/: index.html
latest/_sources/: index.rst.txt  installing.rst.txt  models.rst.txt  nn.rst.txt  optim.rst.txt  trainer.rst.txt  utils.rst.txt
latest/_static/: documentation_options.js
latest/models/: convnext.html  darknet.html  darknetv2.html  darknetv3.html  (+10 more)
references/: README.md  clean_checkpoint.py  requirements.txt
scripts/: collect_env.py  eval_latency.py  export_to_onnx.py
test/: requirements.txt  test_models.py  test_models_classification.py  test_models_detection.py  test_models_segmentation.py  test_nn.py  test_nn_activation.py  test_nn_attention.py  test_nn_conv.py  test_nn_downsample.py  test_nn_functional.py  test_nn_init.py  test_nn_loss.py  test_nn_modules_activation.py  test_nn_upsample.py  test_ops.py  test_optim.py  test_optim_wrapper.py  test_trainer.py  test_trainer_utils.py  test_utils.py  unit_tests.py
tests/: requirements.txt  test_headers.py  test_models.py  test_models_classification.py  test_models_detection.py  test_models_segmentation.py  test_nn.py  test_nn_activation.py  test_nn_attention.py  test_nn_conv.py  test_nn_downsample.py  test_nn_init.py  test_nn_loss.py  test_nn_transformers.py  test_ops.py  test_optim.py  test_optim_wrapper.py  test_requirements.py  test_trainer.py  test_trainer_utils.py  test_transforms.py  test_utils.py
v0.1.0/: .buildinfo  changelog.html  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  utils.data.html  utils.html
v0.1.1/: changelog.html  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  utils.data.html  utils.html
v0.1.2/: changelog.html  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  utils.data.html  utils.html
v0.1.3/: .buildinfo  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  utils.data.html  utils.html
v0.2.0/: changelog.html  genindex.html  index.html  installing.html  models.html  nn.functional.html  nn.html  notebooks.html  objects.inv  ops.html  optim.html  py-modindex.html  search.html  searchindex.js  trainer.html  utils.data.html  utils.html
(+538 files in other folders)
