[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocron"
description = "Modules, operations and models for computer vision in PyTorch"
authors = [
    {name = "François-Guillaume Fernandez", email = "fg-feedback@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
keywords = ["pytorch", "deep learning", "computer vision", "models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "tqdm>=4.1.0",
    "numpy>=1.17.2,<2.0.0",
    "fastprogress>=1.0.0,<2.0.0",
    "matplotlib>=3.0.0,<4.0.0",
    "huggingface-hub>=0.4.0",
    # Indirect deps
    # cf. https://github.com/advisories/GHSA-98vv-pw6r-q6q4
    # cf. https://github.com/pytorch/vision/issues/4934
    # https://github.com/frgfm/Holocron/security/dependabot/5
    "Pillow>=8.4.0,!=9.2.0",
]

[project.optional-dependencies]
test = [
    # cf. https://github.com/frgfm/Holocron/security/dependabot/4
    "pytest>=7.2.0",
    "coverage[toml]>=4.5.4",
    "onnx>=1.13.0,<2.0.0",
]
training = [
    "wandb>=0.10.31,<1.0.0",
    "codecarbon>=2.0.0,<3.0.0",
]
quality = [
    "ruff>=0.0.273,<1.0.0",
    "mypy==1.4.1",
    "types-tqdm",
    "black==23.3.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "pre-commit>=2.17.0,<3.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "recommonmark>=0.7.1",
    # cf. build issues with markdown extension in https://github.com/frgfm/Holocron/pull/232
    "sphinx-markdown-tables==0.0.15",
    # Indirect deps
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    # cf. https://github.com/ryanfox/sphinx-markdown-tables/issues/36
    "markdown<3.4.0",
    "tabulate>=0.8.0,<1.0.0"
]
dev = [
    # test
    "pytest>=7.2.0",
    "coverage[toml]>=4.5.4",
    # style
    "ruff>=0.0.289,<1.0.0",
    "mypy==1.4.1",
    "types-tqdm",
    "black==23.3.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "pre-commit>=2.17.0,<3.0.0",
    # docs
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "recommonmark>=0.7.1",
    "sphinx-markdown-tables>=0.0.15",
    "Jinja2<3.1",
]

[project.urls]
documentation = "https://frgfm.github.io/Holocron"
repository = "https://github.com/frgfm/Holocron"
tracker = "https://github.com/frgfm/Holocron/issues"
changelog = "https://frgfm.github.io/Holocron/latest/changelog.html"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["demo*", "docs*", "notebooks*", "scripts*", "tests*"]

[tool.coverage.run]
source = ["holocron"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "D101", "D103",  # pydocstyle missing docstring in public function/class
    "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "CPY001",  # flake8-copyright
    "ISC",  # flake8-implicit-str-concat
    "PYI",  # flake8-pyi
    "NPY",  # numpy
    "PERF",  # perflint
    "RUF",  # ruff specific
    "PTH",  # flake8-use-pathlib
    "S",  # flake8-bandit
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
]
exclude = [".git"]
line-length = 120
target-version = "py39"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"scripts/**.py" = ["D"]
".github/**.py" = ["D"]
"docs/**.py" = ["E402", "D103"]
"tests/**.py" = ["D103", "CPY001", "S101"]
"demo/**.py" = ["D103"]
"api/**.py" = ["D103"]
"api/tests/**.py" = ["CPY001", "S101"]
"references/**.py" = ["D101", "D103"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
known-first-party = ["holocron", "app"]
known-third-party = ["torch", "torchvision", "fastprogress", "fastapi", "wandb"]

[tool.mypy]
python_version = "3.9"
files = "holocron/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "PIL",
    "torchvision.*",
    "matplotlib.*",
    "fastprogress.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py39']

[tool.bandit]
exclude_dirs = [".github/collect_env.py"]
skips = ["B101"]
