[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocron"
description = "Modules, operations and models for computer vision in PyTorch"
authors = [
    {name = "François-Guillaume Fernandez", email = "fg-feedback@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
keywords = ["pytorch", "deep learning", "computer vision", "models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "tqdm>=4.1.0",
    "numpy>=1.17.2,<2.0.0",
    "fastprogress>=1.0.0,<2.0.0",
    "matplotlib>=3.0.0,<4.0.0",
    "huggingface-hub>=0.4.0",
    # Indirect deps
    # cf. https://github.com/advisories/GHSA-98vv-pw6r-q6q4
    # cf. https://github.com/pytorch/vision/issues/4934
    # https://github.com/frgfm/Holocron/security/dependabot/5
    "Pillow>=8.4.0,!=9.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.2",
    "pytest-cov>=3.0.0,<6.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "onnx>=1.13.0,<2.0.0",
]
training = [
    "wandb>=0.10.31,<1.0.0",
    "codecarbon>=2.0.0,<3.0.0",
]
quality = [
    "ruff==0.4.4",
    "mypy==1.9.0",
    "types-tqdm",
    "pre-commit>=3.0.0,<4.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "recommonmark>=0.7.1",
    # cf. build issues with markdown extension in https://github.com/frgfm/Holocron/pull/232
    "sphinx-markdown-tables==0.0.15",
    # Indirect deps
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    # cf. https://github.com/ryanfox/sphinx-markdown-tables/issues/36
    "markdown<3.4.0",
    "tabulate>=0.8.0,<1.0.0"
]
dev = [
    # test
    "pytest>=7.3.2",
    "pytest-cov>=3.0.0,<6.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "onnx>=1.13.0,<2.0.0",
    # style
    "ruff==0.4.4",
    "mypy==1.9.0",
    "types-tqdm",
    "pre-commit>=3.0.0,<4.0.0",
    # docs
    "sphinx>=3.0.0,!=3.5.0",
    "furo>=2022.3.4",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "recommonmark>=0.7.1",
    "sphinx-markdown-tables>=0.0.15",
    "Jinja2<3.1",
]

[project.urls]
documentation = "https://frgfm.github.io/Holocron"
repository = "https://github.com/frgfm/Holocron"
tracker = "https://github.com/frgfm/Holocron/issues"
changelog = "https://frgfm.github.io/Holocron/latest/changelog.html"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["demo*", "docs*", "notebooks*", "scripts*", "tests*"]

[tool.coverage.run]
source = ["holocron"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "D101", "D103",  # pydocstyle missing docstring in public function/class
    "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "CPY001",  # flake8-copyright
    "ISC",  # flake8-implicit-str-concat
    "PYI",  # flake8-pyi
    "NPY",  # numpy
    "PERF",  # perflint
    "RUF",  # ruff specific
    "PTH",  # flake8-use-pathlib
    "S",  # flake8-bandit
    "N",  # pep8-naming
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
    "LOG",  # flake8-logging
    "SIM",  # flake8-simplify
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "ARG",  # flake8-unused-arguments
    "FURB",  # refurb
]
ignore = [
    "E501",  # line too long, handled by black
    "E203",  # space before slice
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
    "ANN101",  # missing type annotations on self
    "ANN102",  # missing type annotations on cls
    "ANN002",  # missing type annotations on *args
    "ANN003",  # missing type annotations on **kwargs
    "PT011",  # pytest.raises must have a match pattern
    "N812",  # Lowercase imported as non-lowercase
    "ISC001",  # implicit string concatenation (handled by format)
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
]
exclude = [".git"]
line-length = 120
target-version = "py39"
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"scripts/**.py" = ["D", "T201", "ANN"]
".github/**.py" = ["D", "T201", "S602", "ANN"]
"docs/**.py" = ["E402", "D103", "ANN", "A001", "ARG001"]
"tests/**.py" = ["D103", "CPY001", "S101", "ANN"]
"demo/**.py" = ["D103", "ANN"]
"api/**.py" = ["D103"]
"api/app/main.py" = ["ANN"]
"api/tests/**.py" = ["CPY001", "S101", "ANN", "ARG001"]
"references/**.py" = ["D101", "D103", "T201", "ANN"]
"setup.py" = ["T201"]
"holocron/nn/modules/**.py" = ["N806"]
"holocron/models/classification/**.py" = ["N801"]
"holocron/models/*/**.py" = ["D101", "ARG"]
"holocron/nn/functional.py" = ["N802", "ARG"]
"holocron/trainer/**.py" = ["ARG"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
known-first-party = ["holocron", "app"]
known-third-party = ["wandb"]

[tool.mypy]
python_version = "3.9"
files = "holocron/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
disallow_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "PIL",
    "torchvision.*",
    "matplotlib.*",
    "fastprogress.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true
